--- a/withoutDHCP/config/hostapd.conf
+++ b/withoutDHCP/config/hostapd.conf
@@ -1,6 +1,8 @@
 # Configuration for hostapd
 # This is the name of the WiFi interface we configured above
 interface=wlan0
+bridge=br0
+
 # Use the nl80211 driver with the brcmfmac driver
 driver=nl80211
 ssid=yourNetworkName
